--- a/test/test.page.html
+++ b/test/test.page.html
@@ -7,13 +7,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#16537e">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/static-site-gen/public/assets/css/styles.css">
+<link rel="stylesheet" href="./assets/css/styles.css">
     </head>
     <body>
         <nav>
             <a href="./about">About</a> |
 <a href="./projects">Projects</a> |
-<a href="./contact">Contact</a> |
+<a href="./contact">Contact</a>
         </nav>
         <main>
             <h1>Demo EJS Page!</h1>
