Adjust preview/build routes

--- a/src/editor/index.html
+++ b/src/editor/index.html
@@ -35,8 +35,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button id="preview-btn" class="button-primary u-pull-left">Save and Preview</button>
-                        <button id="build-btn" class="button-alt u-pull-right">Build</button>
+                        <button id="preview-btn" class="button-primary u-pull-left">Preview Changes</button>
+                        <button id="build-btn" class="button-alt u-pull-right">Save and Build</button>
                     </div>
                 </form>
             </div>
